--- a/config.toml
+++ b/config.toml
@@ -27,7 +27,7 @@ summaryLength = 30
     weight = 2
 
 [params]
-  google_analytics_id=""
+  google_analytics_id="G-54DDM7XNG7"
   homepage_button_link = '/personal-web/contents/'
   homepage_button_text = 'Continue'
   homepage_intro = 'Whisper is a documentation theme built with Hugo. The design and functionality is intentionally minimal.'
